Cleanup (warnings; formatting)
GitOrigin-RevId: 441da6dd197f87ceef672cf8b9a934a54510e8a2