@@ -113,7 +113,7 @@ public final class ConfigImportHelper {
     ConfigImportSettings settings = findCustomConfigImportSettings();
 
     String pathSelectorOfOtherIde = (settings != null ? settings.getProductToImportFrom(args) : null);
-    @NotNull ConfigDirsSearchResult guessedOldConfigDirs = findConfigDirectories(newConfigDir, pathSelectorOfOtherIde);
+    ConfigDirsSearchResult guessedOldConfigDirs = findConfigDirectories(newConfigDir, pathSelectorOfOtherIde);
     File tempBackup = null;
     boolean vmOptionFileChanged = false;
 
@@ -211,8 +211,7 @@ public final class ConfigImportHelper {
     }
   }
 
-  @Nullable
-  static ConfigImportSettings findCustomConfigImportSettings() {
+  static @Nullable ConfigImportSettings findCustomConfigImportSettings() {
     try {
       String customProviderName = "com.intellij.openapi.application." + PlatformUtils.getPlatformPrefix() + "ConfigImportSettings";
       @SuppressWarnings("unchecked") Class<ConfigImportSettings> customProviderClass = (Class<ConfigImportSettings>)Class.forName(customProviderName);
@@ -373,11 +372,11 @@ public final class ConfigImportHelper {
   }
 
   public static boolean isConfigDirectory(@NotNull Path candidate) {
-    return Arrays.stream(OPTIONS).anyMatch(name -> Files.exists(candidate.resolve(name)));
+    return ContainerUtil.exists(OPTIONS, name -> Files.exists(candidate.resolve(name)));
   }
 
   static class ConfigDirsSearchResult {
-    @NotNull private final List<Pair<Path, FileTime>> directories;
+    private final List<Pair<Path, FileTime>> directories;
     private final boolean fromSameProduct;
 
     ConfigDirsSearchResult(@NotNull List<Pair<Path, FileTime>> directories, boolean fromSameProduct) {
@@ -385,8 +384,7 @@ public final class ConfigImportHelper {
       this.fromSameProduct = fromSameProduct;
     }
 
-    @NotNull
-    List<Path> getPaths() {
+    @NotNull List<Path> getPaths() {
       return ContainerUtil.map(directories, it -> it.first);
     }
 
@@ -394,8 +392,7 @@ public final class ConfigImportHelper {
       return directories.isEmpty();
     }
 
-    @NotNull
-    Pair<Path, FileTime> getFirstItem() {
+    @NotNull Pair<Path, FileTime> getFirstItem() {
       return directories.get(0);
     }
   }
@@ -581,9 +578,9 @@ public final class ConfigImportHelper {
 
   private static @Nullable String getPropertyFromFile(Path file, String propertyName) {
     try {
-      String fileContent = new String(Files.readAllBytes(file), StandardCharsets.UTF_8);
+      String fileContent = Files.readString(file);
 
-      final String fileName = file.getFileName().toString();
+      String fileName = file.getFileName().toString();
       if (fileName.endsWith(".properties")) {
         PropertyResourceBundle bundle = new PropertyResourceBundle(new StringReader(fileContent));
         return bundle.containsKey(propertyName) ? bundle.getString(propertyName) : null;
@@ -712,7 +709,7 @@ public final class ConfigImportHelper {
                        @NotNull ConfigImportOptions options) throws IOException {
     Logger log = options.log;
     if (Files.isRegularFile(oldConfigDir)) {
-      new Decompressor.Zip(oldConfigDir.toFile()).extract(newConfigDir.toFile());
+      new Decompressor.Zip(oldConfigDir.toFile()).extract(newConfigDir);
       return;
     }
 
@@ -745,8 +742,9 @@ public final class ConfigImportHelper {
     updateVMOptions(newConfigDir, log);
   }
 
-  private static @NotNull List<StartupActionScriptManager.ActionCommand> loadStartupActionScript(@NotNull Path oldConfigDir, @Nullable Path oldIdeHome, @NotNull Path oldPluginsDir)
-    throws IOException {
+  private static List<StartupActionScriptManager.ActionCommand> loadStartupActionScript(Path oldConfigDir,
+                                                                                        @Nullable Path oldIdeHome,
+                                                                                        Path oldPluginsDir) throws IOException {
     if (Files.isDirectory(oldPluginsDir)) {
       Path oldSystemDir = oldConfigDir.getParent().resolve(SYSTEM);
       if (!Files.isDirectory(oldSystemDir)) {
@@ -766,10 +764,10 @@ public final class ConfigImportHelper {
     return Collections.emptyList();
   }
 
-  private static void migratePlugins(@NotNull Path oldPluginsDir,
-                                     @NotNull Path newPluginsDir,
+  private static void migratePlugins(Path oldPluginsDir,
+                                     Path newPluginsDir,
                                      List<StartupActionScriptManager.ActionCommand> actionCommands,
-                                     @NotNull ConfigImportOptions options) throws IOException {
+                                     ConfigImportOptions options) throws IOException {
     Logger log = options.log;
     try {
       List<IdeaPluginDescriptorImpl> pluginsToMigrate = new ArrayList<>();
@@ -812,7 +810,7 @@ public final class ConfigImportHelper {
   }
 
   private static List<PluginId> collectPendingPluginUpdates(List<StartupActionScriptManager.ActionCommand> commands,
-                                                            @NotNull ConfigImportOptions options) {
+                                                            ConfigImportOptions options) {
     List<PluginId> result = new ArrayList<>();
     for (StartupActionScriptManager.ActionCommand command : commands) {
       String source;
@@ -842,7 +840,7 @@ public final class ConfigImportHelper {
     return result;
   }
 
-  private static void migratePlugins(@NotNull Path newPluginsDir,
+  private static void migratePlugins(Path newPluginsDir,
                                      List<IdeaPluginDescriptorImpl> pluginsToMigrate,
                                      List<PluginId> idsToSkip,
                                      Logger log) throws IOException {
@@ -852,7 +850,7 @@ public final class ConfigImportHelper {
         continue;
       }
       log.info("Migrating plugin " + descriptor.getPluginId() + " version " + descriptor.getVersion());
-      File path = descriptor.getPath();
+      File path = descriptor.getPluginPath().toFile();
       if (path.isDirectory()) {
         FileUtil.copyDir(path, new File(newPluginsDir.toFile(), path.getName()));
       }
@@ -862,8 +860,8 @@ public final class ConfigImportHelper {
     }
   }
 
-  private static void downloadUpdatesForIncompatiblePlugins(@NotNull Path newPluginsDir,
-                                                            @NotNull ConfigImportOptions options,
+  private static void downloadUpdatesForIncompatiblePlugins(Path newPluginsDir,
+                                                            ConfigImportOptions options,
                                                             List<IdeaPluginDescriptorImpl> incompatiblePlugins,
                                                             List<PluginId> pendingUpdates,
                                                             ProgressIndicator indicator) {
@@ -902,10 +900,7 @@ public final class ConfigImportHelper {
 
   private static boolean isBrokenPlugin(IdeaPluginDescriptorImpl plugin, ConfigImportOptions options) {
     Map<PluginId, Set<String>> versions = options.brokenPluginVersions;
-    if (versions != null) {
-      return versions.get(plugin.getPluginId()).contains(plugin.getVersion());
-    }
-    return PluginManagerCore.isBrokenPlugin(plugin);
+    return versions != null ? versions.get(plugin.getPluginId()).contains(plugin.getVersion()) : PluginManagerCore.isBrokenPlugin(plugin);
   }
 
   private static boolean isEmptyDirectory(Path newPluginsDir) {
